[package]
name = "bevy_june_26_jam"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = "0.18.1"
bevy_ecs = "0.18.1"
cargo-examples = "0.6.0"
