[package]
name = "solar_game"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = 0
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_image", "bevy_input_focus", "bevy_log", "bevy_picking", "bevy_render", "bevy_scene", "bevy_state", "bevy_text", "bevy_ui","2d", "2d_api", "2d_bevy_render", "bevy_window", "bevy_winit", "default_font", "png", "wayland", "dynamic_linking"]}
itertools = "0.15.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.10.1"
rust_decimal = "1.42.1"
